data/issues_nolabel/nolabel_test_9002.txt
Unable to compile TF, CUBLAS_GEMM_ALGO? not declared in scope

Have I written custom code (as opposed to using a stock example script provided in TensorFlow)?: no
TensorFlow installed from (source or binary)?: source
TensorFlow version: 1.1.0rc1 (master as of April 5, 2017)
Bazel version (if compiling from source): 0.4.5
CUDA/cuDNN version: 8/5.1
GPU Model and Memory: Titan X (PASCAL) 12GB
Exact command to reproduce: bazel build -c opt --copt=-mavx --copt=-mfma --copt=-mfpmath=both --config=cuda -k //tensorflow/tools/pip_package:build_pip_package

Here's the compile config:
$ ./configure 
Please specify the location of python. [Default is /path/to/anaconda2/bin/python]: 
Please specify optimization flags to use during compilation when bazel option "--config=opt" is specified [Default is -march=native]: 
Do you wish to use jemalloc as the malloc implementation? [Y/n] n
jemalloc disabled
Do you wish to build TensorFlow with Google Cloud Platform support? [y/N] 
No Google Cloud Platform support will be enabled for TensorFlow
Do you wish to build TensorFlow with Hadoop File System support? [y/N] 
No Hadoop File System support will be enabled for TensorFlow
Do you wish to build TensorFlow with the XLA just-in-time compiler (experimental)? [y/N] 
No XLA support will be enabled for TensorFlow
Found possible Python library paths:
/path/to/python/site-packages
Please input the desired Python library path to use.  Default is [/path/to/python/site-packages]
/path/to/python/site-packages
Do you wish to build TensorFlow with OpenCL support? [y/N] 
No OpenCL support will be enabled for TensorFlow
Do you wish to build TensorFlow with CUDA support? [y/N] y
CUDA support will be enabled for TensorFlow
Do you want to use clang as CUDA compiler? [y/N] 
nvcc will be used as CUDA compiler
Please specify which gcc should be used by nvcc as the host compiler. [Default is /opt/gcc/4.9.2/bin/gcc]: 
Please specify the CUDA SDK version you want to use, e.g. 7.0. [Leave empty to use system default]: 
Please specify the location where CUDA  toolkit is installed. Refer to README.md for more details. [Default is /usr/local/cuda]: /opt/cuda-8.0
Please specify the cuDNN version you want to use. [Leave empty to use system default]: 
Please specify the location where cuDNN  library is installed. Refer to README.md for more details. [Default is /opt/cuda-8.0]: /opt/cudnn-8.0
Please specify a list of comma-separated Cuda compute capabilities you want to build with.
You can find the compute capability of your device at: https://developer.nvidia.com/cuda-gpus.
Please note that each additional compute capability significantly increases your build time and binary size.
[Default is: "3.5,5.2"]: 3.5,5.2,6.1
Warning: ignoring LD_PRELOAD in environment.
............
INFO: Starting clean (this may take a while). Consider using --async if the clean takes more than several minutes.
Configuration finished


Describe the problem clearly
CentOS 6.6, compiling using instructions from #110 (comment) gives an error as mentioned later.
I have been able to compile TF upto 1.0.1 successfully on the same machine.
Also, same issue was mentioned in #8790 (comment), but I'm not sure if the OP opened an issue
Source Code / Logs
ERROR: /path/to/tensorflow/stream_executor/BUILD:39:1: Couldn't build file tensorflow/stream_executor/_objs/cuda_platform/tensorflow/stream_executor/cuda/cuda_blas.pic.o: C++ compila
tion of rule '//tensorflow/stream_executor:cuda_platform' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D
_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 118 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/stream_executor/cuda/cuda_blas.cc: In member function 'virtual bool perftools::gputools::cuda::CUDABlas::GetBlasGemmAlgorithms(std::vector<long long int>*)':
tensorflow/stream_executor/cuda/cuda_blas.cc:1916:9: error: 'CUBLAS_GEMM_ALGO5' was not declared in this scope
         CUBLAS_GEMM_ALGO5, CUBLAS_GEMM_ALGO6, CUBLAS_GEMM_ALGO7}) {
         ^
tensorflow/stream_executor/cuda/cuda_blas.cc:1916:28: error: 'CUBLAS_GEMM_ALGO6' was not declared in this scope
         CUBLAS_GEMM_ALGO5, CUBLAS_GEMM_ALGO6, CUBLAS_GEMM_ALGO7}) {
                            ^
tensorflow/stream_executor/cuda/cuda_blas.cc:1916:47: error: 'CUBLAS_GEMM_ALGO7' was not declared in this scope
         CUBLAS_GEMM_ALGO5, CUBLAS_GEMM_ALGO6, CUBLAS_GEMM_ALGO7}) {
                                               ^
tensorflow/stream_executor/cuda/cuda_blas.cc:1916:64: error: unable to deduce 'std::initializer_list<_Tp>&&' from '{CUBLAS_GEMM_DFALT, CUBLAS_GEMM_ALGO0, CUBLAS_GEMM_ALGO1, CUBLAS_GEMM_ALGO2, CUBLAS_GEMM_ALGO3, CUBLAS_GEMM_ALGO4, <express
ion error>, <expression error>, <expression error>}'
         CUBLAS_GEMM_ALGO5, CUBLAS_GEMM_ALGO6, CUBLAS_GEMM_ALGO7}) {